2007-07-03  Marek Habersack  <mhabersack@novell.com>

	* SimpleWebHandlerParser.cs: improve directive
	pre-parsing. Directives can span multiple lines, they don't have
	to start at the beginning of the line and any content can follow
	them after the directive end. Also, do not trim the input since
	that might affect program content. Fixes bug #81993.

2007-07-02  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: make sure TemplateSourceDirectory returns meaningful
	results in the 1.1 profile. Fixes bug #81950.

2007-06-24  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ObjectStateFormatter.cs: WriterContext.RegisterCache, refactored out
	parameter

2007-06-20  Marek Habersack  <mhabersack@novell.com>

	* BasePartialCachingControl.cs: use HttpRuntime.InternalCache to
	keep the private entries.

2007-06-18 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs: revised the changes from r79982. 	

2007-06-18 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs: optimized flow in ResolveClientUrl. 	

2007-06-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* ObjectStateFormatter.cs: Avoid NRE in Serialize. Fixes bug #81851.

2007-06-09  Marek Habersack  <mhabersack@novell.com>

	* TemplateControl.cs: make sure TemplateControl is set to the
	current control.

	* Control.cs: TemplateControl property goes up the parent chain if
	the property isn't defined in the current control.
	TemplateSourceDir finally implemented correctly.

2007-06-06  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: more changes to the way TemplateSourceDirectory
	works in the 2.0 profile. Take into account situations when a
	control is placed in a UserControl (.ascx) and only then fall back
	to the parent for its TemplateSourceDirectory.

2007-06-05  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: TemplateSourceDirectory uses TemplateControl to
	lookup the virtual source directory in the 2.0 instead of the
	Parent.